# rattler-book

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TUTOR.md  entangled.toml  pixi.toml
.github/workflows/: ci.yml  deploy-book.yml  release.yml
book/: Cargo.toml  book.toml  exercises-plan.md  mkdocs.yml
book/overrides/: landing.html
book/plugins/: margin_note.py
book/src/: SUMMARY.md  appendix-rust-concepts.md  build_prelude.lua  ch01-what-is-a-package-manager.md  ch02-project-setup.md  ch03-init.md  ch03-manifest.md  ch04-repodata.md  ch04-search.md  ch05-add.md  ch05-install.md  ch05-solver.md  ch06-add.md  ch06-install.md  ch06-lock.md  ch07-install.md  ch07-shell.md  ch07-the-lock-file.md  ch08-run.md  ch08-shell-hook.md  ch09-build.md  ch09-run.md  ch10-build.md  conclusion.md  deep-dive-adapting.md  deep-dive-build-script-api.md  deep-dive-crate-ecosystem.md  deep-dive-networking.md  deep-dive-package-format.md  deep-dive-resolvo.md  deep-dive-run-exports.md  deep-dive-virtual-packages.md  index.md  introduction.md  main.rs  manifest.rs  progress.rs  recipe.rs  using-this-book.md  why-conda.md
book/src/commands/: add.rs  build.rs  init.rs  install.rs  mod.rs  run.rs  shell.rs
book/src/javascripts/: extra.js  source-viewer.js
book/src/stylesheets/: exercises.css  extra.css  source-viewer.css
casts/: build.cast  build.tape  install-and-run.cast  install-and-run.tape
examples/hello-moon/: build.lua  luapkg.toml  moonshot.toml  recipe.toml
examples/intro/: hello.rs
examples/lumen/: build.lua  lumen.lua  moonshot.toml
examples/mooncolor/: build.lua  mooncolor.lua  moonshot.toml  recipe.toml
examples/moonjson/: build.lua  moonjson.lua  moonshot.toml  recipe.toml
examples/moontemplate/: build.lua  moonshot.toml  moontemplate.lua  recipe.toml
scripts/: fish-config.fish  fix-markers.py  generate_source_manifest.py  record-build.sh  record-install-and-run.sh  record-prep.sh  set_version.py
src/: build_backend.rs  build_prelude.lua  client.rs  environment.rs  lock.rs  main.rs  manifest.rs  progress.rs  project.rs  recipe.rs  resolve.rs  session.rs
src/commands/: add.rs  build.rs  init.rs  install.rs  lock.rs  mod.rs  run.rs  search.rs  shell.rs  shell_hook.rs
