# ~/~ begin <<src/ch02-project-setup.md#Cargo.toml>>[init]
[package]
name = "luapkg"
version = "0.1.0"
edition = "2021"
description = "A minimal Lua package manager built on rattler"

[[bin]]
name = "luapkg"
path = "src/main.rs"

[features]
default = ["rustls-tls"]
rustls-tls = [
    "reqwest/rustls-tls",
    "reqwest/rustls-tls-native-roots",
    "rattler/rustls-tls",
    "rattler_cache/rustls-tls",
    "rattler_networking/rustls-tls",
    "rattler_repodata_gateway/rustls-tls",
]

[dependencies]
# Core rattler crates
rattler = { version = "0.40.0", default-features = false, features = ["indicatif"] }
rattler_cache = { version = "0.6.15", default-features = false }
rattler_conda_types = { version = "0.44.0", default-features = false }
rattler_digest = { version = "1.2.2", default-features = false }
rattler_networking = { version = "0.26.3", default-features = false, features = ["system-integration"] }
rattler_package_streaming = { version = "0.24.3", default-features = false }
rattler_repodata_gateway = { version = "0.27.0", default-features = false, features = ["gateway"] }
rattler_shell = { version = "0.26.3", default-features = false }
rattler_solve = { version = "5.0.0", default-features = false, features = ["resolvo"] }
rattler_index = { version = "0.27.17", default-features = false }
rattler_virtual_packages = { version = "2.3.12", default-features = false }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "color", "suggestions"] }

# Error handling — miette gives beautiful terminal diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Serialization — manifest I/O
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# HTTP client (versions must match what rattler expects)
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
reqwest-middleware = "0.4"

# Progress bars
indicatif = "0.18"

# Console formatting
console = "0.16"

# Timestamps for package metadata
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# SHA-256 for paths.json integrity data
sha2 = "0.10"

# JSON serialization used directly in build command
serde_json = "1"

# Temporary directory for build workspace
tempfile = "3"

# Directory walking for collecting build outputs
walkdir = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# ~/~ end
